Dashboard cliente listo

--- a/client/cliente/css/style.css
+++ b/client/cliente/css/style.css
@@ -4,3 +4,7 @@
 #link{
     color: white;
 }
+.x{
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold',
+                  sans-serif;
+}
